# SkiTech-backend

./: .env.example  .gitignore  CHANGELOG.md  COMPLAINTS_BACKEND_COMPLETE.md  FILES_SUMMARY_KRA_IMPLEMENTATION.md  GEOLOCATION_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_KRA_MONTHLY_QUARTERLY.md  KRA_IMPLEMENTATION_INDEX.md  LICENSE  PROJECT_SUMMARY_2026.md  QUICK_REFERENCE_GEOLOCATION.md  README.md  SECURITY_FIXES.md  VERIFICATION_REPORT_KRA_IMPLEMENTATION.md  WEEK_1_REPORT.md  WEEK_2_REPORT.md  WEEK_3_REPORT.md  config.py  db_connection.py  main.py  migrate_missing_columns.py  migrate_room_number_start.py  render.yaml  requirements.txt  seed_data.py  seed_roles.py  seed_tenant.py  test_db.py  test_security_fixes.py  uvicorn_config.py
_teammate_extras/skitec/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
_teammate_extras/skitec/app/: main.py
_teammate_extras/skitec/app/api/v1/: router.py  vendor_owner_department_routes.py
_teammate_extras/skitec/app/core/: constants.py
_teammate_extras/skitec/app/middleware/: error_handler.py
_teammate_extras/skitec/app/models/: __init__.py  base.py  governance.py  property.py
_teammate_extras/skitec/app/schemas/: __init__.py  attendance.py  property.py  user.py
_teammate_extras/skitec/app/services/: audit_service.py  kra_service.py  workforce_service.py
_teammate_extras/skitec/app/utils/: geolocation.py  helpers.py
_teammate_extras/skitec/services/ai/: main.py  requirements.txt
_teammate_extras/skitec/services/bi/: main.py
_teammate_extras/skitec/services/identity/: main.py
_teammate_extras/skitec/services/inventory/: main.py
_teammate_extras/skitec/services/sop/: main.py  requirements.txt
_teammate_extras/skitec/tests/: test_auth.py  test_kra_compliance_and_reports.py  test_monthly_quarterly_kra.py
_teammate_extras/skitec/tests/fixtures/: __init__.py
alembic/: env.py
app/: __init__.py
(+209 files in other folders)
